用户编辑的完善

--- a/web_back/login.html
+++ b/web_back/login.html
@@ -76,7 +76,7 @@
         1.为登录按钮绑定点击事件
         2.获取用户名 和 密码
           2.1-取空格
-          2.2-飞空判断
+          2.2-非空判断
           2.3-空提示
           2.4-有继续执行
         3.ajax调用登录接口
