文章列表和文章发布的完善

--- a/web_back/article_list.html
+++ b/web_back/article_list.html
@@ -250,7 +250,7 @@
               <td class="text-center">{{v.date}}</td>
               <td class="text-center">{{v.state}}</td>
               <td class="text-center">
-                <a href="post-edit.html?id=995" data-id="{{v.id}}" class="btn btn-default btn-xs">编辑</a>
+                <a href="./article_edit.html" data-id="{{v.id}}" class="btn btn-default btn-xs">编辑</a>
                 <a href="#" data-id="{{v.id}}" class="btn btn-danger btn-xs">删除</a>
               </td>
             </tr>
