--- a/web_back/article_release.html
+++ b/web_back/article_release.html
@@ -30,6 +30,8 @@
     </div>
     <div class="container-fluid common_con">
       <form class="form-horizontal article_form">
+         <!-- 文本域-- 文章id-->
+         <input type="hidden" class="id" name="id">
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">文章标题：</label>
           <div class="col-sm-10">
@@ -73,7 +75,7 @@
           <label for="inputEmail3" class="col-sm-2 control-label">文章内容：</label>
           <div class="col-sm-10">
             <textarea class="form-control" id="rich_content" placeholder="文章内容">
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda fugiat illo nihil molestias ab. Laborum eius non atque, totam sapiente quae obcaecati assumenda ratione inventore pariatur maiores, qui libero delectus.
+             菩提本无树
              </textarea>
           </div>
         </div>
